// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Refund should render correctly when peach wallet is active 1`] = `
<PeachText>
  The escrow has been refunded to your Peach wallet
</PeachText>
`;

exports[`Refund should render correctly when peach wallet is not active 1`] = `
<PeachText>
  The escrow has been refunded to the specified address.
</PeachText>
`;
